Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11668

Softkey example: Filedialog is too small in landscape orientation on N97.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.7.0
    • 4.7.0
    • None
    • None
    • 30ef2af599f85fef56b975f45fd4edfe817a449a, e5bd34ac642bf7665f618e5e2ce5f62cfb29fb73

    Description

      Steps to reproduce:

      1. Launch softkey example on N97.
      2. Switch to landscape mode.
      3. Press Filedialog.

      The dialog does not fit on the screen.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            samimeri Sami Merila (Inactive)
            axisnokia axisnokia (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes