QFileDialog broken in landscape in N8

The screen estate runs out for nHD landscape. Due to this, all
"system" dialogs (file, color, font dialogs and wizards) in Symbian
are now shown in fullscreen mode, instead of being just maximized.

Task-number: QTBUG-11668
Reviewed-by: Miikka Heikkinen